--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,25 +1,38 @@
 {
-  "scripts": {
-    "test": "npx hardhat test --network hardhat"
+  "name": "credly-server",
+  "version": "1.0.0",
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
+  "main": "hardhat.config.js",
+  "directories": {
+    "test": "test"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npx hardhat run scripts/deploy.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@types/jest": "^28.1.7",
-    "hardhat": "^2.10.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.4",
+    "hardhat": "^2.9.3"
   },
   "dependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "chai": "^4.3.6",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@openzeppelin/contracts": "^4.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.7.21",
-    "typechain": "^8.1.0"
+    "install": "^0.13.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
+    "npm": "^8.17.0",
+    "solidity-coverage": "^0.7.21"
   }
 }
