--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@rainbow-me/rainbowkit": "^0.5.0",
+    "alchemy-sdk": "^2.0.3",
     "ethers": "^5.7.0",
     "framer-motion": "^6.5.1",
     "lodash.merge": "^4.6.2",
@@ -22,7 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "wagmi": "^0.6.4"
+    "wagmi": "^0.6.4",
+    "web3.storage": "^4.3.0"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
